# tg_bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint_and_types.yaml
bot/: allbooks.py  bot.py  config.py  db.sql  db.sqlite3  message_text.py  num_to_words.py  user.py  votings.py
