[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Vladimir Dimitrov <v.dimitrov@g.nsu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
scipy = "^1.11.4"
python-telegram-bot = "^20.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
